Fixed mobile text alignment

--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #CBC1A4;
-	height: 100%;
+	height: 100%; 
+	width: 100%;
 }
 
 .avatar {
@@ -12,11 +13,19 @@ body {
 }
 
 .text-block {
-	margin-left: 2em;
-	margin-right: 2em;
 	justify-content: center;
   	align-items: center;
   	width: 100%;
+}
+
+.text-block h1 {
+	margin-left: 10px;
+}
+
+.text-block p {
+	display: table;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .socials-container {
